2005-2-15 Mike Johnson <mrjohnson0@users.sourceforge.net>
	* pyembed.c: remove debug printf
	* pyjobject.c: decref fields list in dealloc
	* Jep.java, Run.java, BSFJepEngine.java: set license information
	to libpng. it's the closest to what i wanted. really, i don't care
	what the heck you do with them.
	
2004-12-13 Mike Johnson <mrjohnson0@users.sourceforge.net>
	* pyjmethod.c: throw exception for calling non-static methods
	* pyembed.c: don't return error state without releasing GIL
	* util.c: release utf string local references
	* pyjclass.c: don't close localframe after last EXIT
	* pyjobject.c: delete local method refs instead of filling localframe
	* pyjembed.c: flush stdout and stderr after script run
	
2004-07-26 Mike Johnson <mrjohnson0@users.sourceforge.net>
	* pyjobject.c: fix circular reference memory leak
	
2004-06-24 Mike Johnson <mrjohnson0@users.sourceforge.net>
	* Jep.java: throw exception if calls not from original, python thread
	* pyjmethod.c: check if method should be called on class, not obj
	* ltmain.sh: a couple fixes for broken redhat boxen
	* pyembed.c: fclose script file.
	* pyembed.c: tstate, remove hashcode
	* pyjclass.c: fixed typo in malloc call
	* pyjarray.c: added support for java primitive arrays
	* Run.java: a class to run python scripts
	* console.py: a python-based interactive console, with readline
	* Jep.java: added constructor to append to sys.path
	* Makefile: added javadoc support, javadoc included in CVS

2004-06-17 Mike Johnson <mrjohnson0@users.sourceforge.net>
	* util.c: check string before converting. fixes crash if you used
	Jep.set(String - (String) null).
	* Console.java: some work here, pretty functional. basically acts
	like python interactive prompt compiled without readline.
	* Jep.java: some changes to eval() support.
	
2004-06-14 Mike Johnson <mrjohnson0@users.sourceforge.net>
	* Makefile: for older autotools
	* Makefile: for gcc 2.95
	* pyjobject.c: fixed bug in method search